# p2p-lending-sharpe-optimization

./: README.md  pyproject.toml
lcp2p/: cli.py  config.py
lcp2p/experiments/: analysis.py  plots.py  sensitivity.py
lcp2p/finance/: returns.py
lcp2p/io/: data.py
lcp2p/models/: xgb_default.py
lcp2p/preprocess/: member2.py  member3.py  member4.py  processor.py
lcp2p/strategy/: expected_return.py  portfolio.py  risk_proxy.py
lcp2p/utils/: io.py  repro.py
